istio/canary-words.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: words-virtualservice
  namespawoce: api
spec:
  hosts:
    - words
  http:
  - route:
    - destination:
        host: words
        subset: v1
      weight: 90
    - destination:
        host: words
        subset: v2
      weight: 10
