istio/routes-words.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: words-virtualservice
  namespace: api
spec:
  hosts:
    - words
  http:
  - route:
    - destination:
        host: words
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: words-destination
  namespace: api
spec:
  host: words
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
